<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DongleLauncher</string>
    <string name="hello_world">Hello world!</string>
	<string name="DONGLE_guide">Please scan the QR code on the left and download the Dongle according to the advices for android system mobile phone clients,then set the dongle router mode.</string>
	<string name="allapp">APPS</string>
	<string name="connect_method">Connect methods</string>
	<string name="function">Function</string>
	<string name="mode_ap">Mode: </string>
	<string name="mode_router">Mode: </string>
	<string name="ap_ssid">SSID: </string>
	<string name="ap_password">PASSWORD: </string>
	<string name="router_ssid">SSID: </string>
	<string name="router_ip">IP: </string>
	<string name="dlna_name">DLNA :</string>
	<string name="dlna_state">DLNA_state: </string>
	<string name="airplay_name">Airplay :</string>
	<string name="airplay_state">Airplay_state: </string>
	<string name="airmirror_name">AirMirror :</string>
	<string name="airmirror_state">AirMirror_state: </string>
	<string name="Setting_Step">Step 1: Download apk to set network Or Simple key to Set the network manually!\n  Step 2:Simple Key to next!</string>
	<string name="main_network">Network Setting</string>
	<string name="main_app">APPS</string>
	<string name="main_guide">Guide</string>
	<string name="main_system_setting">System Setting</string>
	<string name="instr_introduction">1.Mirror Dongle introduction \n By using the mirror Dongle, can make Android, IOS device push pictures, video and screen of the machine to TV, projector etc.</string>
	<string name="instr_function">2.Provides functionality \n DLNA : Airplay : Airmirror : Miracast</string>
	<string name="instr_mode">3.Double Connection mode \n Two connection ways : AP , Router \n AP : Hot spots generated by mirror\'s own dongle \n Router : External router mirror dongle connection</string>
	<string name="instr_approach">4.Set the mirror dongle connect to external routing approach \n 1)Scan two-dimensional code, Download apk to set \n 2)Use the settings manually mouse</string>
	<string name="instr_fragement">5.Mode of operation \n Use the Simple key to switch pages : DLNA,Airplay,Airmirror-> Miracast -> Setting -> Main -> DLNA,Airplay,Airmirror</string>
</resources>
