<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dangle_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageview_dlna"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/dangle_dlna_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/dlna_name" />

                <TextView
                    android:id="@+id/textview_dlna_name"
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="NULL" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/dangle_line" />

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
              	android:id="@+id/imageview_airplay"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/dangle_wifi_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/airplay_name" />

                <TextView
                    android:id="@+id/textview_airplay_name"
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="NULL" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/dangle_line" />

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageview_airmirror"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/dangle_airplay_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/airmirror_name" />

                <TextView
                    android:id="@+id/textview_airmirror_name"
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="NULL" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dangle_bg_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/dangle_dangle_connect" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/dangle_router_connect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/mode_ap" />

                <TextView
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/ap_ssid" />

                <TextView
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/ap_password" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textview_ap_mode"
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="AP" />

                <TextView
                    android:id="@+id/textview_ap_ssid"
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="NULL" />

                <TextView
                    android:id="@+id/textview_ap_password"
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="NULL" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/mode_router" />

                <TextView
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/router_ssid" />

                <TextView
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/router_ip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textview_router_mode"
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="Router" />

                <TextView
                    android:id="@+id/textview_router_ssid"
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="NULL" />

                <TextView
                    android:id="@+id/textview_router_ip"
                    style="@style/fontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="NULL" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>